install provider, create and add wrapper component, some changes in payment page structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   fluttertoast: ^8.2.8
+  cloud_firestore: ^5.4.5
+  random_string: ^2.3.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
