--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.4.5
   random_string: ^2.3.1
   provider: ^6.1.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
