--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   random_string: ^2.3.1
   provider: ^6.1.2
   flutter_spinkit: ^5.2.1
+  get: ^4.6.6
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
